--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node --project tsconfig.json src/index.ts",
+    "start": "NODE_ENV=production node dist/index.js",
     "build": "rm -rf dist && tsc",
     "dev": "nodemon"
   },
