--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=production node dist/index.js",
-    "build": "rm -rf dist && tsc",
+    "start": "node dist/index.js",
+    "build": "del dist && tsc",
     "dev": "nodemon"
+  },
+  "_moduleAliases": {
+    "@": "dist"
   },
   "keywords": [],
   "author": "",
@@ -18,9 +21,6 @@
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.0.3"
-  },
-  "_moduleAliases": {
-    "@": "dist"
   },
   "dependencies": {
     "@discordjs/opus": "^0.9.0",
