--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/index.js",
-    "build": "del dist && tsc",
+    "start": "node ./dist/index.js",
+    "build": "rm -rf dist && tsc",
     "dev": "nodemon"
   },
   "_moduleAliases": {
