--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,9 +15,12 @@
     "outDir": "dist",
     "baseUrl": "src",
     "paths": {
-      "@/*": [
-        "./*"
-      ],
+      "@constant/*": ["constants/*"],
+      "@model/*": ["models/*"],
+      "@service/*": ["services/*"],
+      "@command/*": ["commands/*"],
+      "@util/*": ["utils/*"],
+      "@type/*": ["types/*"]
     },
   },
   "include": [
