--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "NODE_ENV=production node dist/index.js",
-    "build": "del -rf dist && tsc",
+    "build": "rm -rf dist && tsc",
     "dev": "nodemon"
   },
   "_moduleAliases": {
